# serializer version: 1
# name: TestRefImage.test_estimate_capture_parameters[10000]
  tuple(
    Sensor(
      D=1.0833855799376628,
      L_x=1.0833855799376628,
      L_y=1.0833855799376628,
      bit_depth=100.0,
      cold_filter_emissivity=0.0,
      cold_filter_temperature=70.0,
      cold_filter_transmission=1.0,
      cold_shield_temperature=70.0,
      da_x=0.0,
      da_y=0.0,
      dark_current=0,
      eta=0.0,
      f=10.031347962382446,
      filter_kernel=array([1]),
      frame_stacks=1,
      int_time=1,
      max_n=100000000,
      max_well_fill=1.0,
      n_tdi=1.0,
      name='ref_image',
      opt_trans_wavelengths=array([3.8e-07, 7.0e-07]),
      optics_emissivity=0.0,
      optics_temperature=270.0,
      optics_transmission=array([1., 1.]),
      other_irradiance=0.0,
      other_noise=array([0]),
      p_x=2e-05,
      p_y=2e-05,
      pv=0.0,
      pv_wavelength=6.33e-07,
      qe=array([1., 1.]),
      qe_wavelengths=array([3.8e-07, 7.0e-07]),
      read_noise=0,
      s_x=0.0,
      s_y=0.0,
      w_x=2e-05,
      w_y=2e-05,
    ),
    Scenario(
      aircraft_speed=0,
      altitude=10000,
      atm=array([[3.00000000e-07, 1.61430404e-01, 0.00000000e+00, 0.00000000e+00,
          2.96549975e+06, 1.98660000e+05],
         [3.10000000e-07, 2.37839296e-01, 0.00000000e+00, 0.00000000e+00,
          1.22560000e+07, 9.74010000e+05],
         [3.20000000e-07, 2.90373504e-01, 0.00000000e+00, 0.00000000e+00,
          2.76150000e+07, 2.60459975e+06],
         ...,
         [1.39800000e-05, 1.47225996e-02, 4.15140000e+06, 9.23430000e+04,
          2.30259988e-02, 1.48580000e+04],
         [1.39900000e-05, 6.33369992e-03, 4.04519975e+06, 3.96770000e+04,
          1.19440006e-02, 6.45859961e+03],
         [1.40000000e-05, 3.90179991e-03, 4.15619975e+06, 2.44080000e+04,
          1.04599996e-02, 4.00289990e+03]]),
      background_reflectance=0.07,
      background_temperature=293,
      cn2_at_1m=0,
      ground_range=0,
      ha_wind_speed=0,
      ihaze=1,
      name='ref_image',
      target_reflectance=0.15,
      target_temperature=295,
    ),
  )
# ---
# name: TestRefImage.test_estimate_capture_parameters[1000]
  tuple(
    Sensor(
      D=0.10833855799731913,
      L_x=0.10833855799731913,
      L_y=0.10833855799731913,
      bit_depth=100.0,
      cold_filter_emissivity=0.0,
      cold_filter_temperature=70.0,
      cold_filter_transmission=1.0,
      cold_shield_temperature=70.0,
      da_x=0.0,
      da_y=0.0,
      dark_current=0,
      eta=0.0,
      f=1.0031347962382444,
      filter_kernel=array([1]),
      frame_stacks=1,
      int_time=1,
      max_n=100000000,
      max_well_fill=1.0,
      n_tdi=1.0,
      name='ref_image',
      opt_trans_wavelengths=array([3.8e-07, 7.0e-07]),
      optics_emissivity=0.0,
      optics_temperature=270.0,
      optics_transmission=array([1., 1.]),
      other_irradiance=0.0,
      other_noise=array([0]),
      p_x=2e-05,
      p_y=2e-05,
      pv=0.0,
      pv_wavelength=6.33e-07,
      qe=array([1., 1.]),
      qe_wavelengths=array([3.8e-07, 7.0e-07]),
      read_noise=0,
      s_x=0.0,
      s_y=0.0,
      w_x=2e-05,
      w_y=2e-05,
    ),
    Scenario(
      aircraft_speed=0,
      altitude=1000,
      atm=array([[3.00000000e-07, 6.70006573e-01, 0.00000000e+00, 0.00000000e+00,
          4.59480000e+05, 5.58120000e+05],
         [3.10000000e-07, 7.08292782e-01, 0.00000000e+00, 0.00000000e+00,
          1.93110000e+06, 2.50940000e+06],
         [3.20000000e-07, 7.29579687e-01, 0.00000000e+00, 0.00000000e+00,
          4.43270000e+06, 6.22370000e+06],
         ...,
         [1.39800000e-05, 1.38834193e-01, 5.77420000e+06, 8.70480000e+05,
          1.35859996e-02, 1.40620000e+05],
         [1.39900000e-05, 8.74299034e-02, 6.10450000e+06, 5.47540000e+05,
          5.68979979e-03, 8.93820000e+04],
         [1.40000000e-05, 6.36345968e-02, 6.25160000e+06, 3.98050000e+05,
          3.34699987e-03, 6.52830000e+04]]),
      background_reflectance=0.07,
      background_temperature=293,
      cn2_at_1m=0,
      ground_range=0,
      ha_wind_speed=0,
      ihaze=1,
      name='ref_image',
      target_reflectance=0.15,
      target_temperature=295,
    ),
  )
# ---
# name: TestRefImage.test_show_method
  tuple(
    -5.104,
    5.104,
    -5.104,
    5.104,
  )
# ---
